6972374: NetworkInterface.getNetworkInterfaces throws "java.net.SocketException" on Solaris zone

Reviewed-by: alanb, dsamersoff